# funlib.geometry

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pixi.toml  pyproject.toml  setup.py
.github/workflows/: black.yaml  ci.yaml  mypy.yaml  pytest.yaml  ruff.yaml  tests.yaml
funlib/geometry/: __init__.py  array.py  coordinate.py  roi.py
src/funlib/geometry/: __init__.py  coordinate.py  float_coordinate.py  float_roi.py  roi.py
tests/: coordinate.py  test_array.py  test_coordinate.py  test_float_coordinate.py  test_float_roi.py  test_questions.py  test_roi.py
